[package]
name = "curried"
version = "0.1.2"
edition = "2021"
authors = ["Jedsek <jedsek@qq.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/curried/latest/curried/"
homepage = "https://github.com/jedsek/curried"
repository = "https://github.com/jedsek/curried"
keywords = [ "syntax", "functional", "macro", "curry"]
description = "currying function to be used in normal && generic && map case, with procedural macro."

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.51", features = ["full"] }

[lib]
proc-macro = true
